--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
 			<version>5.3.1</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>6.0.3</version>
+		</dependency>
 
 	</dependencies>
 	<build>
